--- a/sevenLetterWord/logger.properties
+++ b/sevenLetterWord/logger.properties
@@ -1,6 +1,5 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=FATAL, A1
-log4j.category.seven.f10.g4=DEBUG
+log4j.rootLogger=ERROR, A1
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
