--- a/trunk/sevenLetterWord/logger.properties
+++ b/trunk/sevenLetterWord/logger.properties
@@ -1,5 +1,6 @@
 # Set root logger level to DEBUG and its only appender to A1.
 log4j.rootLogger=ERROR, A1
+log4j.category.seven.f10.g4=DEBUG
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
